# cpp-plots

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
01_matplotlib-wrapper/: CMakeLists.txt
01_matplotlib-wrapper/src/: main_animate.cpp  main_line.cpp
02_gtkmm/: CMakeLists.txt
02_gtkmm/src/: main_hello_world.cpp  main_mwe.cpp  main_plplot.cpp  main_updating_plot.cpp
03_server-client/: CMakeLists.txt
03_server-client/include/: plotting_server.h
03_server-client/scripts/: client.py  global_variables.py  plot_funcs.py  receive_data.py
03_server-client/src/: main.cpp  plotting_server.cpp
gtkmm/: CMakeLists.txt
gtkmm/src/: main_hello_world.cpp  main_mwe.cpp  main_plplot.cpp  main_updating_plot.cpp
server-client/: CMakeLists.txt  client.py
server-client/include/: plotting_server.h
server-client/scripts/: client.py  global_variables.py  plot_funcs.py  receive_data.py
server-client/src/: main.cpp  plotting_server.cpp
src/: main.cpp  main_animate.cpp
